Feature: add JWT role-based security, automated fine calculation via SQL triggers, and student debt payment UI